Update version. Add one step login checkbox, and use purchasePromoCodeProductFlowUrl

--- a/browser/index.hbs
+++ b/browser/index.hbs
@@ -38,6 +38,7 @@
         <hr/>
         <label><input type="checkbox" id="use-popup"> Popup</label>
         <label><input type="checkbox" id="use-new-flow" checked> New Flow</label>
+        <label><input type="checkbox" id="one-step-login"> One step login</label>
         <br/>
         using
         <label><input type="radio" value="" name="login-method" checked>Credentials</label>
@@ -86,7 +87,7 @@
             <button class="buy-product-old-flow">Buy product</button>
         </p>
         <p>
-            BFF payment flow:
+            PromoCode product code:
             <input class="buy-promo-code-product-id" type="text" value="{{config.paymentPromoCodeProduct}}" />
             <button class="buy-promo-code-product">Buy PromoCode Product</button>
         </p>
