Use publisher name for button text

--- a/browser/index.hbs
+++ b/browser/index.hbs
@@ -103,7 +103,7 @@
         <p>
             PromoCode product code for alternative client:
             <input class="product-id" type="text" value="{{config.alternativeClient.paymentPromoCodeProduct}}" />
-            <button class="buy-promo-code-product-alternative-client">Buy PromoCode Product alternative client</button>
+            <button class="buy-promo-code-product-alternative-client">Buy PromoCode Product for {{config.alternativeClient.publisher}} client</button>
         </p>
     {{/if}}
         <p class="has-product-container">
