Use publisher name for PromoCode description

--- a/browser/index.hbs
+++ b/browser/index.hbs
@@ -101,7 +101,7 @@
         </p>
     {{#if config.alternativeClient.paymentPromoCodeProduct}}
         <p>
-            PromoCode product code for alternative client:
+            PromoCode product code for {{config.alternativeClient.publisher}} client:
             <input class="product-id" type="text" value="{{config.alternativeClient.paymentPromoCodeProduct}}" />
             <button class="buy-promo-code-product-alternative-client">Buy PromoCode Product for {{config.alternativeClient.publisher}} client</button>
         </p>
