--- a/browser/index.hbs
+++ b/browser/index.hbs
@@ -61,11 +61,13 @@
             <button class="update-is-logged-in-to-sso">Update</button>
             <button class="login" title="Login to Schibsted SSO">Login</button>
             <button class="logout-sso" title="Logout from Schibsted SSO">Logout</button>
-            {{#if config.siteSpecificLogout}}
-                <button class="simplified-login-trigger" title="Simplified login">Trigger simplified login</button>
-            {{/if}}
             <input type="email" id="preferred-email" placeholder="preferred@user.email"/>
+            <button class="simplified-login-widget-trigger" title="Simplified login widget">Trigger simplified login widget</button>
         </p>
+        <div id="simplified-login-widget-container">
+            <div id="simplified-login-widget">
+            </div>
+        </div>
         <p>
             User is connected to merchant:
             <span class="user-is-connected-to-merchant">checking...</span>
@@ -121,18 +123,5 @@
             <button class="has-subscription">Check</button>
         </p>
         <p class="footer">Welcome to SDK Example v{{pkgJson.version}}</p>
-
-        <div class="simplified-login">
-            <div class="spinner"></div>
-            <div class="simplified-login-content">
-                <div class="simplified-login-header">
-                    <span class="close-simplified-login">&times;</span>
-                    <h3>Simplified login</h3>
-                </div>
-                <p>Continue with your account:
-                <button class="simplified-login-action" title="Simplified login action"></button>
-                </p>
-            </div>
-        </div>
     </body>
 </html>
