Add pay now login after button

--- a/browser/index.hbs
+++ b/browser/index.hbs
@@ -106,6 +106,7 @@
             PromoCode product code for {{config.alternativeClient.publisher}} client:
             <input class="product-id" type="text" value="{{config.alternativeClient.paymentPromoCodeProduct}}" />
             <button class="buy-promo-code-product-alternative-client">Buy PromoCode Product for {{config.alternativeClient.publisher}} client</button>
+            <button class="buy-promo-code-product-alternative-client-pay-now-login-after">Pay now login after</button>
         </p>
     {{/if}}
         <p class="has-product-container">
