Change label, remove mfa methods

--- a/browser/index.hbs
+++ b/browser/index.hbs
@@ -57,11 +57,9 @@
             <label><input type="radio" value="otp-sms" name="login-method">SMS</label>
         </fieldset>
         <fieldset>
-            <legend>MFAs</legend>
+            <legend>Authentication methods</legend>
             <label><input type="radio" value="otp" name="login-method">Code generator</label>
             <label><input type="radio" value="sms" name="login-method">SMS code</label>
-            <label><input type="radio" value="mfa" name="login-method">Multifactor auth (any)</label>
-            <label><input type="radio" value="otp sms" name="login-method">Multifactor auth (both SMS & Code)</label>
         </fieldset>
         <br/>
         <hr/>
