New passwordless showroom

--- a/browser/index.hbs
+++ b/browser/index.hbs
@@ -127,6 +127,13 @@
             <input class="has-access-id" type="text"></input>
             <button class="has-access">Check</button>
         </p>
+        <p class="passwordless">
+            Passwordless:
+            <input class="passwordless-email" type="email"></input>
+            <button class="submit-passwordless-email">Start passwordless</button>
+            <input class="passwordless-code" type="text"></input>
+            <button class="submit-passwordless-code">Submit code</button>
+        </p>
         <p class="footer">Welcome to SDK Example v{{pkgJson.version}}</p>
     </body>
 </html>
