feat: add eid login methods

--- a/browser/index.hbs
+++ b/browser/index.hbs
@@ -55,6 +55,8 @@
             <label><input type="checkbox" value="password" name="login-method">Force password</label>
             <label><input type="checkbox" value="otp" name="login-method">Code generator</label>
             <label><input type="checkbox" value="sms" name="login-method">SMS code</label>
+            <label><input type="checkbox" value="eid-no" name="login-method">BankID NO</label>
+            <label><input type="checkbox" value="eid-se" name="login-method">BankID SE</label>
         </fieldset>
         <br/>
         <hr/>
