--- a/browser/index.hbs
+++ b/browser/index.hbs
@@ -29,7 +29,6 @@
         </script>
         <link rel="stylesheet" href="/browser/index.css" />
         <link rel="icon" href="/browser/favicon.ico" type="image/x-icon" />
-        <script src="https://cdn.polyfill.io/v2/polyfill.js?features=Promise,URL,Object.entries,fetch,Array.from,Number.isInteger"></script>
     </head>
 
     <body>
@@ -100,7 +99,7 @@
         <div>
             <pre><code class="token-introspection-result"></code></pre>
         </div>
-        <script src="/dist/index.js"></script>
+        <script src="/dist/index.min.js"></script>
         <h2>Payment</h2>
 
         <p>
