chore: update building process
ref: UUI-241

--- a/server/views/error.hbs
+++ b/server/views/error.hbs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Error {{status}}</title>
-        <link rel="stylesheet" href="/browser/index.css" />
+        <link rel="stylesheet" href="/public/index.css" />
     </head>
     <body>
         <h1>{{name}} ({{status}})</h1>
