--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -27,8 +27,8 @@
                 console.log(JSON.stringify(window.config, undefined, 2));
             }
         </script>
-        <link rel="stylesheet" href="/browser/index.css" />
-        <link rel="icon" href="/browser/favicon.ico" type="image/x-icon" />
+        <link rel="stylesheet" href="/public/index.css" />
+        <link rel="icon" href="/public/favicon.ico" type="image/x-icon" />
     </head>
 
     <body>
