--- a/server/views/safepage.hbs
+++ b/server/views/safepage.hbs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Obtained the code</title>
-        <link rel="stylesheet" href="/browser/index.css" />
+        <link rel="stylesheet" href="/public/index.css" />
     </head>
     <body>
         <h1>Logged in!</h1>
