--- a/server/views/legacy-index.hbs
+++ b/server/views/legacy-index.hbs
@@ -27,7 +27,7 @@
                 console.log(JSON.stringify(window.config, undefined, 2));
             }
         </script>
-        <link rel="stylesheet" href="/public/index.css" />
+        <link rel="stylesheet" href="/public/legacy/index.css" />
         <link rel="icon" href="/public/favicon.ico" type="image/x-icon" />
     </head>
 
