feat: add support for v2 frontend
ref: UUI-1469

--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -47,6 +47,7 @@
         <label><input type="checkbox" id="use-popup"> Popup</label>
         <label><input type="checkbox" id="use-new-flow" checked> New Flow</label>
         <label><input type="checkbox" id="one-step-login"> One step login</label>
+        <label><input type="checkbox" id="use-v2-frontend"> Use V2 frontend</label>
         <br/>
         using
         <fieldset>
