--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -58,6 +58,7 @@
                 <label><input type="checkbox" value="eid-no" name="login-method" data-only-one-chosen="bankId">BankID NO</label>
                 <label><input type="checkbox" value="eid-se" name="login-method" data-only-one-chosen="bankId">BankID SE</label>
                 <label><input type="checkbox" value="eid-fi" name="login-method" data-only-one-chosen="bankId">BankID FI</label>
+                <label><input type="checkbox" value="eid-dk" name="login-method" data-only-one-chosen="bankId">BankID DK</label>
             {{/isNotSpidProd}}
             {{#isSpidProdWithActiveBankId}}
                 <label><input type="checkbox" value="eid" name="login-method">BankID</label>
